Working in Peripheral-MSI

--- a/sim/verilog/tests/bfm/axi4/Makefile
+++ b/sim/verilog/tests/bfm/axi4/Makefile
@@ -5,7 +5,7 @@ build:
 	vlog -sv -f system.vc
 
 simulate:
-	vsim -c -do run.do work.testbench_axi_master_bfm
+	vsim -c -do run.do work.peripheral_bfm_testbench
 
 clean:
-	rm -rf work transcript
+	rm -rf work transcript *.vcd
