--- a/sim/mixed/tests/core/wb/msim/Makefile
+++ b/sim/mixed/tests/core/wb/msim/Makefile
@@ -6,7 +6,7 @@ build:
 	vcom -2008 -f system.vhdl.vc
 
 simulate:
-	vsim -c -do run.do work.mpsoc_msi_testbench
+	vsim -c -do run.do work.peripheral_msi_testbench
 
 clean:
 	rm -rf work transcript
