--- a/sim/verilog/tests/core/ahb3/iverilog/Makefile
+++ b/sim/verilog/tests/core/ahb3/iverilog/Makefile
@@ -1,7 +1,7 @@
 all: build simulate
 
 build:
-	iverilog -g2012 -o system.vvp -c system.vc -s mpsoc_msi_testbench
+	iverilog -g2012 -o system.vvp -c system.vc -s peripheral_msi_testbench
 
 simulate:
 	vvp system.vvp
