--- a/sim/verilog/tests/core/ahb3/msim/Makefile
+++ b/sim/verilog/tests/core/ahb3/msim/Makefile
@@ -5,7 +5,7 @@ build:
 	vlog -sv -f system.vc
 
 simulate:
-	vsim -c -do run.do work.mpsoc_msi_testbench
+	vsim -c -do run.do work.peripheral_msi_testbench
 
 clean:
 	rm -rf work transcript
