--- a/sim/verilog/tests/core/wb/msim/Makefile
+++ b/sim/verilog/tests/core/wb/msim/Makefile
@@ -5,7 +5,7 @@ build:
 	vlog -sv -f system.vc
 
 simulate:
-	vsim -c -do run.do work.wb_msi_tb
+	vsim -c -do run.do work.peripheral_msi_testbench
 
 clean:
 	rm -rf work transcript
