--- a/sim/verilog/tests/bfm/apb4/msim/Makefile
+++ b/sim/verilog/tests/bfm/apb4/msim/Makefile
@@ -46,11 +46,10 @@ all: build simulate
 
 build:
 	if [ ! -e work ]; then vlib work; fi
-	vlog -sv  -f system.verilog.vc
-	vcom -2008 -f system.vhdl.vc
+	vlog -sv -f system.vc
 
 simulate:
-	vsim -c -do run.do work.peripheral_msi_testbench
+	vsim -c -do run.do work.peripheral_bfm_testbench
 
 clean:
 	rm -rf work transcript
