--- a/sim/vhdl/verification/tests/peripheral/ahb3/ghdl/Makefile
+++ b/sim/vhdl/verification/tests/peripheral/ahb3/ghdl/Makefile
@@ -55,8 +55,8 @@ build:
 	ghdl -a --std=08 ../../../../../../../bench/vhdl/code/tests/peripheral/ahb3/peripheral_msi_testbench.vhd
 
 simulate:
-	ghdl -m --std=08 peripheral_msi_testbench
-	ghdl -r --std=08 peripheral_msi_testbench --ieee-asserts=disable-at-0 --disp-tree=inst > peripheral_msi_testbench.tree
+	ghdl -e --std=08 peripheral_msi_testbench
+	ghdl -r --std=08 peripheral_msi_testbench --ieee-asserts=disable-at-0 --vcd=peripheral_msi_testbench.vcd --wave=system.ghw --stop-time=1ms
 
 clean:
-	rm -f *.cf *.tree
+	rm -f *.cf *.vcd *.ghw
