--- a/sim/vhdl/verification/tests/peripheral/wb/ghdl/Makefile
+++ b/sim/vhdl/verification/tests/peripheral/wb/ghdl/Makefile
@@ -45,19 +45,7 @@
 all: build simulate
 
 build:
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/pkg/core/vhdl_pkg.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/pkg/peripheral/wb/peripheral_wb_pkg.vhd
-
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/arbiter/peripheral_msi_arbiter.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/cdc/peripheral_msi_cc561_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/cdc/peripheral_msi_cdc_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/cdc/peripheral_msi_sync2_pgen_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/main/peripheral_msi_arbiter_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/main/peripheral_msi_data_resize_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/main/peripheral_msi_interface_wb.vhd
-	ghdl -a --std=08 ../../../../../../../rtl/vhdl/code/peripheral/wb/main/peripheral_msi_mux_wb.vhd
-
-	ghdl -a --std=08 ../../../../../../../bench/vhdl/code/tests/peripheral/wb/peripheral_msi_testbench.vhd
+	sh system.s
 
 simulate:
 	ghdl -e --std=08 peripheral_msi_testbench
